Bug 266859 - While creating the temp file, a blank, always-on-top rectangle appears on the top-left of the screen
Summary: While creating the temp file, a blank, always-on-top rectangle appears on the...
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.6.x
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-22 00:17 UTC by nickpantazis
Modified: 2015-01-08 22:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nickpantazis 2011-02-22 00:17:27 UTC
Version:           unspecified (using KDE 4.6.0) 
OS:                Linux

While creating the temp file, a blank, always-on-top rectangle appears on the top-left of the screen

Reproducible: Always
Comment 1 Rolf Eike Beer 2011-02-22 07:49:34 UTC
What action were you doing that creates the tempfile?
Comment 2 nickpantazis 2011-02-22 11:37:54 UTC
Right clicking and Actions>Encrypt folder
Selecting symmetric cryptography
A warning dialog says that a temp file at /tmp will be created
The blank rectangle appears
When the "Insert passphrase" dialog appears, the plank rectangle disappears

Becomes noticeable with large folders
Comment 3 Rolf Eike Beer 2011-12-17 17:38:26 UTC
Git commit 257dcc852bd706b927440c49d227a877f38a9257 by Rolf Eike Beer.
Committed on 17/12/2011 at 15:59.
Pushed by dakon into branch 'master'.

put compression and encryption of a folder into a KJob

This fixes an empty KPassivePopup showing up in the top left of the screen,
which is a remnant of KDE 3.5 days. It also improves the feedback to the user
on what's happening a lot.

And while at it this also fixes a couple of memleaks and other stuff.

BUG:266859
FIXED-IN:4.8.0

M  +1    -0    CMakeLists.txt
A  +120  -0    foldercompressjob.cpp     [License: GPL (v2+)]
A  +70   -0    foldercompressjob.h     [License: GPL (v2+)]
M  +36   -66   kgpgexternalactions.cpp
M  +2    -4    kgpgexternalactions.h

http://commits.kde.org/kgpg/257dcc852bd706b927440c49d227a877f38a9257