put compression and encryption of a folder into a KJob

This fixes an empty KPassivePopup showing up in the top left of the screen,
which is a remnant of KDE 3.5 days. It also improves the feedback to the user
on what's happening a lot.

And while at it this also fixes a couple of memleaks and other stuff.

BUG:266859
FIXED-IN:4.8.0